groundswell progam state into this object, and out of the figure,
axes, etc. userdata fields.  This was always one the biggest
weirdnesses with GUI programming in Matlab.

Fixed bug where debugging messages about the resampling method went to
the command window.

Fixed bug where Groundswell_main.get_spectrogram_params() and
Groundswell_main.get_spectrogram_params() didn't return enough args if
user hit 'Cancel' or there was a problem with the params.

Changed what Groundswell_main methods I could to static class methods.

Fixed bug where errordlg() would sometimes cause the main figure
contents to shrink.

Made it so y axis labels all line up w/ each other.

Deleted leading spaces from names & units on data load.





1.06 -> 1.07  (September 21, 2011)

Refactored code into some approximation of the MVC style.  I think
this will make it easier to think about and maintain going forward.

Put the test code into the groundswell directory, so that I can
distribute the test code with the code proper.

First code checked into Janelia internal Subversion repository.

As with all versions since 1.01, groundswell 1.07 relies upon the 
Taylor Matlab Toolbox, version 1.10.





1.07 -> 1.08 (December 16, 2011)

Made the pivot signal the reference/input signal.  This is better for
making polar plots of the coherency of many channels with respect to a
common reference (see below).

Added polar plots of coherency at a specified frequency, for multiple
test signals.  Raw data is also written to the clipboard in CSV
format.

Changed the way selected channels are shown, to make more salient.

Fixed bugs in display of spectrograms, coherograms when the time
origin for the current viewport is not zero.  

Added display of f_res_diam, N_fft for all spectral plots.  

This version relies upon Taylor Matlab Toolbox version 1.11.




1.08 -> 1.09 (April 24, 2012)

Many many changes and improvements, including the integration of Roving, a GUI for browsing and analyzing optical data.

