@@ -31,6 +31,7 @@ classdef View < handle
     open_menu_h
     import_menu_h
     import_roi_data_menu_h
+    import_ft_roi_data_menu_h
     close_menu_h
     save_menu_h
     save_as_menu_h
@@ -68,6 +69,7 @@ classdef View < handle
     coherogram_menu_h
     transfer_function_menu_h
     play_as_audio_menu_h
+    count_ttl_edges_menu_h
     % scroll buttons
     to_start_button_h
     page_left_button_h
@@ -179,8 +181,13 @@ classdef View < handle
         uimenu(self.file_menu_h,...
                'Separator','on',...
                'enable','off', ...
-               'Label','Append ROI Data...',...
+               'Label','Add ROI Data and Sync...',...
                'Tag','import_roi_data_menu_h');
+      self.import_ft_roi_data_menu_h=...
+        uimenu(self.file_menu_h,...
+               'enable','off', ...
+               'Label','Add FT ROI Data and Sync...',...
+               'Tag','import_ft_roi_data_menu_h');
       self.save_menu_h=...
         uimenu(self.file_menu_h,...
                'enable','off', ...
@@ -266,7 +273,7 @@ classdef View < handle
         uimenu(self.x_axis_menu_h,...
                'Separator','on',...
                'Tag','edit_t_bounds_menu_h',...
-               'Label','Set range...',...
+               'Label','Set Range...',...
                'Enable','off');
 
       % the y-axis menu
@@ -275,16 +282,16 @@ classdef View < handle
                           'Label','Y Axis');
       self.edit_y_bounds_menu_h=uimenu(self.y_axis_menu_h,...
                                   'Tag','edit_y_bounds_menu_h',...
-                                  'Label','Set range...',...
+                                  'Label','Set Range...',...
                                   'Enable','off',...
                                   'Callback',@(src,event)(gsmc.edit_y_bounds()));
       self.optimize_selected_y_menu_h=uimenu(self.y_axis_menu_h,...
                                         'Tag','optimize_selected_y_menu_h',...
-                                        'Label','Optimize range of selected',...
+                                        'Label','Optimize Range of Selected',...
                                         'Enable','off');
       self.optimize_all_y_menu_h=uimenu(self.y_axis_menu_h,...
                                    'Tag','optimize_all_y_menu_h',...
-                                   'Label','Optimize range of all',...
+                                   'Label','Optimize Range of All',...
                                    'Enable','off');
 
       % the mutation menu
@@ -293,7 +300,7 @@ classdef View < handle
                              'Label','Mutation');
       self.change_fs_menu_h=...
         uimenu(self.mutation_menu_h,...
-               'Label','Change sampling frequency...', ...
+               'Label','Change Sampling Frequency...', ...
                'Enable','off');
       self.center_menu_h=uimenu(self.mutation_menu_h,...
                            'Tag','center_menu_h',...
@@ -305,7 +312,7 @@ classdef View < handle
                            'Enable','off');
       self.dx_over_x_menu_h=uimenu(self.mutation_menu_h,...
                                   'Tag','dx_over_x_menu_h',...
-                                  'Label','Delta over mean (%)',...
+                                  'Label','Delta Over Mean (%)',...
                                   'Enable','off');
 
       % the analysis menu
@@ -313,7 +320,7 @@ classdef View < handle
                              'Tag','analysis_menu_h',...
                              'Label','Analysis');
       self.power_spectrum_menu_h=uimenu(self.analysis_menu_h,...
-             'Label','Power spectrum...',...
+             'Label','Power Spectrum...',...
              'Enable','off',...
              'Tag','power_spectrum_menu_h');
       self.spectrogram_menu_h=uimenu(self.analysis_menu_h,...
@@ -325,20 +332,25 @@ classdef View < handle
              'Enable','off',...
              'Tag','coherency_menu_h');
       self.coherency_at_f_probe_menu_h=uimenu(self.analysis_menu_h,...
-             'Label','Coherency at one frequency...',...
+             'Label','Coherency at One Frequency...',...
              'Enable','off');
       self.coherogram_menu_h=uimenu(self.analysis_menu_h,...
              'Label','Coherogram...',...
              'Enable','off',...
              'Tag','coherogram_menu_h');
       self.transfer_function_menu_h=uimenu(self.analysis_menu_h,...
-             'Label','Transfer function...',...
+             'Label','Transfer Function...',...
              'Enable','off',...
              'Tag','transfer_function_menu_h');
       self.play_as_audio_menu_h=uimenu(self.analysis_menu_h,...
-                                       'Label','Play as audio',...
+                                       'Label','Play as Audio',...
                                        'Visible','off',...
                                        'Enable','off');
+      self.count_ttl_edges_menu_h=uimenu(self.analysis_menu_h,...
+                                         'Separator','on',...
+                                         'Label','Count TTL Edges',...
+                                         'Visible','on',...
+                                         'Enable','off');
 
 
 
