@@ -9,6 +9,8 @@ set(self.close_menu_h,'Callback', ...
       @(src,event)(controller.close()));
 set(self.import_roi_data_menu_h,'Callback', ...
       @(src,event)(controller.import_roi_data()));
+set(self.import_ft_roi_data_menu_h,'Callback', ...
+      @(src,event)(controller.import_roi_data('FT')));
 set(self.save_menu_h,'Callback', ...
       @(src,event)(controller.save()));
 set(self.save_as_menu_h,'Callback', ...
@@ -61,6 +63,8 @@ set(self.transfer_function_menu_h,'Callback', ...
       @(src,event)(controller.transfer_function()));
 set(self.play_as_audio_menu_h,'Callback', ...
       @(src,event)(controller.play_as_audio()));
+set(self.count_ttl_edges_menu_h,'Callback', ...
+      @(src,event)(controller.count_ttl_edges()));
 
 % scroll buttons
 set(self.to_start_button_h,'Callback', ...
